--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ name = "conllu"
 path = "src/main.rs"
 
 [dependencies]
+clap = "2"
+conllu = "0.2"
+stdinout = "0.4"
+rand = "0.7"
+rand_xorshift = "0.2"
