--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 clap = "2"
 conllu = "0.2"
 flate2 = "1"
+itertools = "0.9"
 stdinout = "0.4"
 rand = "0.7"
 rand_xorshift = "0.2"
