--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ path = "src/main.rs"
 [dependencies]
 clap = "2"
 conllu = "0.3"
+failure = "0.1"
 flate2 = "1"
 itertools = "0.9"
 stdinout = "0.4"
