--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,5 @@ itertools = "0.9"
 stdinout = "0.4"
 rand = "0.7"
 rand_xorshift = "0.2"
+unicode_categories = "0.1"
 unicode-normalization = "0.1"
