--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ name = "conllu"
 path = "src/main.rs"
 
 [dependencies]
+anyhow = "1"
 clap = "2"
 colored = "1"
-conllu = "0.3.1"
-failure = "0.1"
+conllu = "0.4.1"
 flate2 = "1"
 itertools = "0.9"
 stdinout = "0.4"
