--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,12 @@ path = "src/main.rs"
 anyhow = "1"
 clap = "2"
 colored = "1"
-conllu = "0.5.1"
+conllu = "0.6"
 flate2 = "1"
 itertools = "0.9"
 stdinout = "0.4"
 rand = "0.7"
 rand_xorshift = "0.2"
+udgraph = "0.6"
 unicode_categories = "0.1"
 unicode-normalization = "0.1"
