--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ colored = "1"
 conllu = "0.6"
 flate2 = "1"
 itertools = "0.9"
+petgraph = "0.5"
 stdinout = "0.4"
 rand = "0.7"
 rand_xorshift = "0.2"
